updating our details

--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>I am a Solutions Manager</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>New Rochelle, NY.</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>Used to be walking pre-pandemic, now it's just reading</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>Running my own system intergration company</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>New Rochelle, NY</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>I want to be a web developer because it will help me move up in my company and allow me to have another source of income.</p>
     </section>
 
     <footer id="footer">
